--- a/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -3,6 +3,9 @@
 "failed_signup" = "登録に失敗しました";
 "failed_add_book" = "書籍登録に失敗しました";
 
+// MARK: - アラートメッセージ
+"success_add_book" = "書籍登録が完了しました";
+
 // MARK: - ホーム
 "book_list" = "書籍一覧";
 "add_book" = "書籍追加";
@@ -22,6 +25,8 @@
 // MARK: - 一般
 "yes" = "はい";
 "no" = "いいえ";
+"success" = "成功";
+"failure" = "失敗";
 "close" = "閉じる";
 "error" = "エラー";
 "please_check_again_contents" = "ご入力内容をもう一度ご確認ください";
