--- a/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -1,12 +1,14 @@
 // MARK: - アプリ
 "mail_address" = "メールアドレス";
 "password" = "パスワード";
+"logout" = "ログアウト";
 "title" = "タイトル";
 "price" = "金額";
 "purchase_date" = "購入日";
 
 // MARK: - エラーメッセージ
 "failed_login" = "ログインに失敗しました";
+"failed_logout" = "ログアウトに失敗しました";
 "failed_signup" = "登録に失敗しました";
 "failed_book_list" = "書籍の取得に失敗しました";
 "failed_add_book" = "書籍登録に失敗しました";
@@ -15,6 +17,7 @@
 // MARK: - アラートメッセージ
 "success_add_book" = "書籍登録が完了しました";
 "success_edit_book" = "書籍編集が完了しました";
+"did_you_logout" = "ログアウトしますか？";
 
 // MARK: - ホーム
 "book_list" = "書籍一覧";
