--- a/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -5,6 +5,8 @@
 "title" = "タイトル";
 "price" = "金額";
 "purchase_date" = "購入日";
+"tax" = "税";
+"plus" = "+";
 
 // MARK: - エラーメッセージ
 "failed_login" = "ログインに失敗しました";
