--- a/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/Collections/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -28,6 +28,7 @@
 
 // MARK: - バリデーション
 "not_filled" = "%@が入力されていません";
+"not_longer_title_text" = "タイトル名は%@文字以下でご入力ください";
 "not_correct_format_email" = "メールアドレスが正しいフォームで入力されていません";
 "not_length_password" = "パスワードは%@文字以上で入力が必要です";
 "not_matching_password" = "パスワードとパスワード（確認）が一致しません";
