作成: チャット選択画面(ホームにセル(タイトル・画像)生成)

--- a/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -26,6 +26,7 @@
 "book_list" = "書籍一覧";
 "add_book" = "書籍追加";
 "wish_list_book" = "お気に入り書籍";
+"chat" = "チャット";
 
 // MARK: - バリデーション
 "not_filled" = "%@が入力されていません";
