--- a/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -1,4 +1,11 @@
 // MARK: - アプリ
+"home" = "ホーム";
+"book_list" = "書籍一覧";
+"add_book" = "書籍追加";
+"edit_book" = "書籍編集";
+"wish_list_book" = "お気に入り書籍";
+"chat" = "チャット";
+"talk_list" = "トーク一覧";
 "nick_name" = "ニックネーム";
 "mail_address" = "メールアドレス";
 "password" = "パスワード";
@@ -22,12 +29,6 @@
 "success_add_book" = "書籍登録が完了しました";
 "success_edit_book" = "書籍編集が完了しました";
 "did_you_logout" = "ログアウトしますか？";
-
-// MARK: - ホーム
-"book_list" = "書籍一覧";
-"add_book" = "書籍追加";
-"wish_list_book" = "お気に入り書籍";
-"chat" = "チャット";
 
 // MARK: - バリデーション
 "not_filled" = "%@が入力されていません";
