修正: チャットユーザ選択画面タイトル

--- a/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
+++ b/BookList-iOS/AppResources/Support/LocalizedStrings/Localizable.strings
@@ -6,6 +6,7 @@
 "wish_list_book" = "お気に入り書籍";
 "chat" = "チャット";
 "talk_list" = "トーク一覧";
+"select_user" = "ユーザー選択";
 "nick_name" = "ニックネーム";
 "mail_address" = "メールアドレス";
 "password" = "パスワード";
