--- a/BookManager/Resource/Support/LocalizedStrings/Localizable.strings
+++ b/BookManager/Resource/Support/LocalizedStrings/Localizable.strings
@@ -16,6 +16,8 @@
 "login" = "ログイン";
 "create_account" = "アカウント作成";
 "show_password" = "パスワードを表示する";
+"select_chat_image" = "チャット画像選択";
+"nickname" = "ニックネーム";
 
 // MARK: - 書籍関連
 "title" = "タイトル";
