--- a/BookManager/Resource/Support/LocalizedStrings/Localizable.strings
+++ b/BookManager/Resource/Support/LocalizedStrings/Localizable.strings
@@ -36,6 +36,7 @@
 "book_list" = "書籍一覧";
 "wish_list" = "お気に入り一覧";
 "talk_list" = "トーク一覧";
+"talk" = "トーク";
 "chat" = "チャット";
 "book_add" = "書籍追加";
 "book_edit" = "書籍編集";
